AZUREUS CHANGELOG
---------

2005.01.xx | Azureus 2.2.0.3

BUGFIX: Core | IPFilters loaded from static config file weren't working [Parg]




2004.12.18 | Azureus 2.2.0.2

FEATURE: Core | Manual peer upload blocking (when seeding) and kick-banning [Nolar]
FEATURE: Core | Control added to not cache small files (default no cache for < 1MB) [Parg]
FEATURE: Core | Ability to cancel torrent creation processes added [Parg, Gudy]
FEATURE: Core | Ability to cancel sharing process added [Parg]
FEATURE: Core | Ability to pass multiple torrents to Azureus.exe [Parg]
FEATURE: Core | Added configuration items for tracker processing limits [Parg]
FEATURE: Core | Option to open torrent for seeding in create-torrent Wizard [Parg,Gudy]
FEATURE: Core | Auto-rescan of shared resources + addition/deletion of shares accordingly [Parg]
FEATURE: Core | Persistence of download and tracker stats for shares [Parg]
FEATURE: Core | Advanced network settings: MTU, SO_RCVBUF, SO_SNDBUF, IPTOS [Nolar]
FEATURE: Core | Optimistic Connect: drop inactive connections in order to find better ones [Nolar]
FEATURE: Core | Added ability to apply updates and shutdown Azureus instead of restarting [Parg]
FEATURE: Core | Can now specify that password protected tracker web is only available via HTTPS, HTTP access -> access denied [Parg]
FEATURE: Core | Can now specify comment to be added to share torrents [Parg]
FEATURE: Core | resume data no longer saved to torrent files, stored in %user-dir%/active instead [Parg]
FEATURE: Core | Plugin support for installing and uninstaling plugins [Parg]
FEATURE: Core | Category support for shares [Parg]
FEATURE: Core | Apply updates and defer applicaton to later restart/close [Parg/Gudy]
FEATURE: UI   | Added 'share' support to console UI [Nolar]
FEATURE: UI   | Option to show confirmation dialog on torrent Removal [Nolar]
FEATURE: UI   | Added Seed2PeerRatio item to MyTorrents view [Nolar]
FEATURE: UI   | Added detailed connection State to peers view [Nolar]