@@ -1384,7 +1384,8 @@ MainWindow.dialog.restartconfirmation.text=Do you really want to restart Azureus
 deletetorrent.message1=You are about to delete the TORRENT for :\n
 deletetorrent.message2=\nAre you sure you want to proceed?
 ConfigView.label.prioritizemostcompletedfiles=Prioritize most completed files
-
 splash.plugin.init=Initializing Plugin
+ConfigView.section.style.osx_small_fonts=Use small fonts [restart required]
+
 
 #PLEASE LEAVE ME AT VERY BOTTOM!
