@@ -3,7 +3,10 @@ AZUREUS CHANGELOG
 
 2005.01.xx | Azureus 2.2.0.3
 
+FEATURE: UI   | Option to disable small fonts under OSX [Nolar]
+
 BUGFIX: Core | IPFilters loaded from static config file weren't working [Parg]
+
 
 
 
